syntax = "proto3";

import "google/protobuf/struct.proto";

service WebsiteService {
   rpc Scan (ScanParams) returns (Web) {}
   rpc SetScript (ScriptParams) returns (Script) {}
}

message Empty {}

message Headers {
   string key = 1;
   string value = 2;
}

message ScanParams {
   uint32 userId = 1; // user identifier.
   string url = 2; // the page url to run tests on.
   repeated Headers pageHeaders = 3; // heads to include when running.
   bool pageInsights = 4; // Run lighthouse reports.
   bool noStore = 5;  // Do not store to AWS script changes.
   bool scriptsEnabled = 6; // Add js fix script.
   bool mobile = 7; // Run as mobile view port.
   repeated string actions = 8; // List of actions to run on page.
   string ua = 9; // User agent to use for request.
   string standard = 10; // The WCAG standard to use WCAG2A, WCAG2AA, or WCAG2AAA.
   string hideElements = 11; // CSS selector to hide elements from testing, selectors can be comma separated.
}

message ScriptParams {
   bool editScript = 1;
   string url = 2;
   string script = 3;
   string newScript = 4;
}

message IssueMeta {
   bool skipContentIncluded = 1;
}

message IssuesInfo {
   int32 possibleIssuesFixedByCdn = 1;
   int32 totalIssues = 2;
   int32 issuesFixedByCdn = 3;
   int32 errorCount = 4;
   int32 warningCount = 5;
   int32 noticeCount = 6;
   int32 adaScore = 7;
   IssueMeta issueMeta = 8;
}

message PageLoadTime {
   int64 duration = 1;
   string durationFormated = 2;
   string color = 3;
}

message Page {
   string domain = 1;
   string url = 2;  
   int64 adaScore = 3;
   bool cdnConnected = 4;
   PageLoadTime pageLoadTime = 5;
   google.protobuf.Struct insight = 6; // the json details from lighthouse
   IssuesInfo issuesInfo = 7;
   string lastScanDate = 8;  
}

message Problem {
   string code = 1;
   string type = 2;
   int64 typeCode = 3;
   string message = 4;
   string context = 5;
   string selector = 6;
   string runner = 7;
}

message Issues {
   string documentTitle = 1;
   string pageUrl = 2;
   repeated Problem issues = 3;
   string domain = 4;
}

message Script {
   string pageUrl = 1;
   string domain = 2;
   string script = 3;
   string cdnUrlMinified = 4;
   string cdnUrl = 5;
   bool cdnConnected = 6;
   IssueMeta issueMeta = 7;
}

message Web {
   Page webPage = 1;
   Issues issues = 2;
   Script script = 3;
   uint32 userId = 4;
}
